--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "social_media",
-  "version": "0.1.0",
+  "name": "redux-essentials-example",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@mswjs/data": "^0.8.4",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "classnames": "^2.2.6",
+    "date-fns": "^2.12.0",
+    "faker": "^4.1.0",
+    "miragejs": "^0.1.35",
+    "mock-socket": "^9.0.3",
+    "msw": "^0.36.3",
+    "react": "^17",
+    "react-dom": "^17",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^5.0.1",
+    "seedrandom": "^3.0.5",
+    "txtgen": "^2.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +29,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -34,5 +42,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.0.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
